fix: remove overflow-x to show border-radius

--- a/public/styles/02-layout.css
+++ b/public/styles/02-layout.css
@@ -44,7 +44,7 @@ body {
   text-align: center;
   position: relative;
   overflow-y: auto;
-  overflow-x: hidden;
+
 }
 
 /* Intro Header - Outside white container */
